[package]
name = "review-radar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"